overflow issue resolved

--- a/src/assets/styles/Main.css
+++ b/src/assets/styles/Main.css
@@ -1,3 +1,9 @@
+.main-page-all-in-div {
+  margin: 0;
+  padding: 0;
+  width: 1280px;
+  overflow-x: hidden;
+}
 .main-container {
   width: 860px;
   height: 100%;
@@ -414,6 +420,9 @@
 }
 
 @media (max-width: 821px) {
+  .main-page-all-in-div {
+    width: 820px;
+  }
   .intro-small {
     font-size: 32px;
   }
@@ -624,6 +633,9 @@
 /* css for 430 pixel screen */
 
 @media (max-width: 431px) {
+  .main-page-all-in-div {
+    width: 430px;
+  }
   .header-container {
     width: 70%;
     height: 70px;
